# cmake_libraries

argument_cmake/: CMakeLists.txt
calculator-with_argument_cmake/: CMakeLists.txt  cal
calculator-with_creating_one_lib_with_many_sourcefiles/: CMakeLists.txt
calculator-with_creating_one_lib_with_many_sourcefiles/include/: mult.h
calculator-with_creating_one_lib_with_many_sourcefiles/src/: mult.cpp
calculator-with_one_static_lib/: CMakeLists.txt
calculator-with_one_static_lib/include/: sub.h  sum.h
calculator-without lib/: CMakeLists.txt
calculator-without lib/include/: div.h
calculator_with_daynamic_library/: CMakeLists.txt
calculator_with_daynamic_library/src/: div.cpp  main.cpp  sub.cpp  sum.cpp
calculator_with_one_daynamic_library/: shiv.cmake
cmake_concepts/: CMakeLists.txt  hello.cpp
downloadedProject/cppbase-master/New folder/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
downloadedProject/cppbase-master/New folder/apps/: Makefile  cmake_install.cmake  cppbase  helloWorld
downloadedProject/cppbase-master/New folder/include/: version.hpp
downloadedProject/cppbase-master/New folder/src/: Makefile  cmake_install.cmake
shared and static library/: CMakeLists.txt  shared.cmake  static.cmake
student_management_system/include/: addrecord.h  admin.h  cls.h  removerecord.h  searchrecord.h  student.h  viewrecord.h
student_management_system/src/: Admin.cpp  CMakeLists.txt  New Text Document.txt  Student.cpp  addRecord.cpp  clearScreenFunction.cpp  main.cpp  removeRecord.cpp  viewRecord.cpp
