cmake_minimum_required(VERSION 3.17)
project(hello_word LANGUAGES CXX)
add_executable(${PROJECT_NAME} hello.cpp)
set(myvar "hello world.....")
macro(print)
  foreach(var ${ARGN})
    message("${var}=${${var}}")
  endforeach()
    set(myvar "no longer myvar.........")
endmacro()
print(myvar)
print(myvar)